feat: remove query storage
