# package/src/swagger_server/controllers/customer_db_functions.py
@@ -17,7 +17,6 @@ DB = CLIENT.database
 customer_details = DB.customer_details
 payment_details = DB.payment_details
 invoices = DB.invoices
-query_details = DB.query_db
 
 @requires_auth
 @requires_scope('registree')
@@ -154,31 +153,6 @@ def put_invoice(id, body):
     result = invoices.find_one_and_update(
                 {'_id': ObjectId(id)},
                 {'$set':{body.get('field'): body.get('value')}},
-                return_document=ReturnDocument.AFTER
-            )
-    if result:
-        result['_id'] = str(result['_id'])
-        return result
-    else:
-        return {'ERROR': 'No matching data found.'}, 409
-
-@requires_auth
-@requires_scope('recruiter')
-@check_id
-def post_query(body):
-    body['_id'] = ObjectId(body['id'])
-    del body['id']
-    return str(query_details.insert_one(body).inserted_id)
-
-@requires_auth
-@requires_scope('recruiter')
-@check_id
-def expand_query(body):
-    body['_id'] = ObjectId(body['id'])
-    del body['id']
-    result = query_details.find_one_and_replace(
-                {'_id': body['_id']},
-                body,
                 return_document=ReturnDocument.AFTER
             )
     if result:
